@@ -7,79 +7,55 @@ import java.nio.file.*;
 import java.time.*;
 import java.util.*;
 import java.util.concurrent.*;
-import java.util.Base64;
 
 public class PaperBootstrap {
-    private static final String PASSWORD = "eishare2025";
-    private static final String FIXED_SHORT_ID = "eishare2"; // 8位
-
     public static void main(String[] args) {
         try {
             System.out.println("config.yml 加载中...");
             Map<String, Object> config = loadConfig();
 
             String uuid = trim((String) config.get("uuid"));
-            String realityPortStr = trim((String) config.get("reality_port"));
-            String tuicPortStr = trim((String) config.get("tuic_port"));
-            String hy2PortStr = trim((String) config.get("hy2_port"));
-            String sni = trim((String) config.getOrDefault("sni", "www.bing.com"));
+            String tuicPort = trim((String) config.get("tuic_port"));
+            String hy2Port = trim((String) config.get("hy2_port"));
+            String realityPort = trim((String) config.get("reality_port"));
+            String sni = (String) config.getOrDefault("sni", "www.bing.com");
 
-            if (uuid.isEmpty()) throw new RuntimeException("uuid 未设置！");
+            if (uuid.isEmpty()) throw new RuntimeException("❌ uuid 未设置！");
 
-            // 端口验证
-            int realityPort = parsePort(realityPortStr, "reality_port");
-            int tuicPort = parsePort(tuicPortStr, "tuic_port");
-            int hy2Port = parsePort(hy2PortStr, "hy2_port");
-
-            boolean deployReality = realityPort > 0;
-            boolean deployTUIC = tuicPort > 0;
-            boolean deployHY2 = hy2Port > 0;
-
-            if (!deployReality && !deployTUIC && !deployHY2) {
-                throw new RuntimeException("至少启用一个协议端口！");
-            }
+            boolean deployVLESS = !realityPort.isEmpty();
+            boolean deployTUIC = !tuicPort.isEmpty();
+            boolean deployHY2 = !hy2Port.isEmpty();
+            if (!deployVLESS && !deployTUIC && !deployHY2)
+                throw new RuntimeException("❌ 未设置任何协议端口！");
 
             Path baseDir = Paths.get("/tmp/.singbox");
             Files.createDirectories(baseDir);
-            Path configJson = baseDir.resolve("config.json");
-            Path bin = baseDir.resolve("sing-box");
-            Path cert = baseDir.resolve("fullchain.pem");
-            Path key = baseDir.resolve("privkey.pem");
 
-            System.out.println("config.yml 加载成功");
+            Path configJson = baseDir.resolve("config.json");
+            Path cert = baseDir.resolve("cert.pem");
+            Path key = baseDir.resolve("key.pem");
+
+            System.out.println("✅ config.yml 加载成功");
+
+            generateSelfSignedCert(cert, key);
 
             String version = fetchLatestSingBoxVersion();
+            Path bin = baseDir.resolve("sing-box");
             safeDownloadSingBox(version, bin, baseDir);
 
-            // 生成自签证书（TUIC v5 必须）
-            generateSelfSignedCert(cert, key, sni);
-
             // 生成 Reality 密钥对
-            Map<String, String> keys = generateRealityKeys(bin);
-            String privateKey = keys.get("private");
-            String publicKey = keys.get("public");
+            String[] realityKeys = generateRealityKeypair(bin);
+            String privateKey = realityKeys[0];
+            String shortId = realityKeys[1];
 
-            // 确保可执行
-            new ProcessBuilder("bash", "-c", "chmod +x " + bin.toString())
-                    .inheritIO(). amazonlinuxstart().waitFor();
-
-            generateSingBoxConfig(
-                    configJson, uuid,
-                    deployReality, deployTUIC, deployHY2,
-                    realityPort, tuicPort, hy2Port,
-                    sni, cert, key, privateKey
-            );
+            generateSingBoxConfig(configJson, uuid, deployVLESS, deployTUIC, deployHY2,
+                    tuicPort, hy2Port, realityPort, sni, cert, key, privateKey, shortId);
 
             startSingBox(bin, configJson);
 
             String host = detectPublicIP();
-
-            printDeployedLinks(
-                    uuid, deployReality, deployTUIC, deployHY2,
-                    realityPort, tuicPort, hy2Port,
-                    sni, host, publicKey
-            );
-
+            printDeployedLinks(uuid, deployVLESS, deployTUIC, deployHY2,
+                    tuicPort, hy2Port, realityPort, sni, host);
             scheduleDailyRestart();
 
             Runtime.getRuntime().addShutdownHook(new Thread(() -> {
@@ -87,23 +63,11 @@ public class PaperBootstrap {
             }));
 
         } catch (Exception e) {
-            System.err.println("部署失败: " + e.getMessage());
             e.printStackTrace();
         }
     }
 
     private static String trim(String s) { return s == null ? "" : s.trim(); }
-
-    private static int parsePort(String portStr, String name) {
-        if (portStr == null || portStr.isEmpty()) return 0;
-        try {
-            int port = Integer.parseInt(portStr);
-            if (port < 1 || port > 65535) throw new IllegalArgumentException();
-            return port;
-        } catch (Exception e) {
-            throw new RuntimeException(name + " 必须是 1-65535 的整数，当前: " + portStr);
-        }
-    }
 
     private static Map<String, Object> loadConfig() throws IOException {
         Yaml yaml = new Yaml();
@@ -112,133 +76,109 @@ public class PaperBootstrap {
         }
     }
 
-    private static void generateSelfSignedCert(Path cert, Path key, String sni) throws IOException, InterruptedException {
-        System.out.println("生成自签证书...");
+    private static void generateSelfSignedCert(Path cert, Path key) throws IOException, InterruptedException {
+        if (Files.exists(cert) && Files.exists(key)) {
+            System.out.println("🔑 证书已存在，跳过生成");
+            return;
+        }
+        System.out.println("🔨 正在生成自签证书...");
         new ProcessBuilder("bash", "-c",
-                "openssl req -x509 -nodes -days 365 -newkey rsa:2048 " +
-                        "-keyout " + key + " -out " + cert + " " +
-                        "-subj \"/CN=" + sni + "\"")
+                "openssl req -x509 -newkey rsa:2048 -keyout " + key + " -out " + cert +
+                        " -days 365 -nodes -subj '/CN=bing.com'")
                 .inheritIO().start().waitFor();
-        System.out.println("证书生成完成");
+        System.out.println("✅ 已生成自签证书");
     }
 
-    private static Map<String, String> generateRealityKeys(Path singBoxBin) throws IOException, InterruptedException {
-        System.out.println("生成 Reality 密钥对...");
-        ProcessBuilder pb = new ProcessBuilder(singBoxBin.toString(), "generate", "reality-keypair");
+    private static String[] generateRealityKeypair(Path bin) throws IOException, InterruptedException {
+        System.out.println("🔑 正在生成 Reality 密钥对...");
+        ProcessBuilder pb = new ProcessBuilder("bash", "-c", bin + " generate reality-keypair");
         pb.redirectErrorStream(true);
         Process p = pb.start();
-
-        StringBuilder output = new StringBuilder();
-        try (BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
-            String line;
-            while ((line = br.readLine()) != null) output.append(line).append("\n");
+        BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+        String line, priv = "", sid = "";
+        while ((line = reader.readLine()) != null) {
+            if (line.contains("PrivateKey")) priv = line.split(": ")[1].trim();
+            if (line.contains("ShortId")) sid = line.split(": ")[1].trim();
         }
-
-        int exitCode = p.waitFor();
-        String outputStr = output.toString().trim();
-
-        if (exitCode != 0 || outputStr.isEmpty()) {
-            throw new RuntimeException("Reality 密钥生成失败！");
-        }
-
-        Map<String, String> keys = new HashMap<>();
-        for (String line : outputStr.split("\n")) {
-            if (line.startsWith("PrivateKey:")) keys.put("private", line.substring(11).trim());
-            if (line.startsWith("PublicKey:"))  keys.put("public", line.substring(10).trim());
-        }
-
-        if (!keys.containsKey("private") || !keys.containsKey("public")) {
-            throw new RuntimeException("Reality 密钥解析失败！输出: " + outputStr);
-        }
-
-        System.out.println("Reality 密钥生成成功");
-        return keys;
+        p.waitFor();
+        System.out.println("✅ Reality 密钥生成完成");
+        return new String[]{priv, sid};
     }
 
-    private static void generateSingBoxConfig(
-            Path configFile, String uuid,
-            boolean reality, boolean tuic, boolean hy2,
-            int realityPort, int tuicPort, int hy2Port,
-            String sni, Path cert, Path key, String privateKey
-    ) throws IOException {
+    private static void generateSingBoxConfig(Path configFile, String uuid, boolean vless, boolean tuic, boolean hy2,
+                                              String tuicPort, String hy2Port, String realityPort,
+                                              String sni, Path cert, Path key,
+                                              String privateKey, String shortId) throws IOException {
 
         List<String> inbounds = new ArrayList<>();
+        String password = "ieshare2025";
 
-        // === VLESS + Reality (TCP) ===
-        if (reality) {
-            inbounds.add(String.format(
-              "{\n" +
-              "  \"type\": \"vless\",\n" +
-              "  \"tag\": \"vless-in\",\n" +
-              "  \"listen\": \"::\",\n" +
-              "  \"listen_port\": %d,\n" +
-              "  \"sniff\": true,\n" +
-              "  \"users\": [{\"uuid\": \"%s\", \"password\": \"%s\"}],\n" +
-              "  \"tls\": {\n" +
-              "    \"enabled\": true,\n" +
-              "    \"server_name\": \"%s\",\n" +
-              "    \"reality\": {\n" +
-              "      \"enabled\": true,\n" +
-              "      \"handshake\": {\"server\": \"%s\", \"server_port\": 443},\n" +
-              "      \"private_key\": \"%s\",\n" +
-              "      \"short_id\": [\"%s\"]\n" +
-              "    }\n" +
-              "  }\n" +
-              "}",
-              realityPort, uuid, PASSWORD, sni, sni, privateKey, FIXED_SHORT_ID
-            ));
+        if (vless) {
+            inbounds.add("""
+              {
+                "type": "vless",
+                "tag": "vless-in",
+                "listen": "::",
+                "listen_port": %s,
+                "users": [{"uuid": "%s"}],
+                "tls": {
+                  "enabled": true,
+                  "certificate_path": "%s",
+                  "key_path": "%s",
+                  "reality": {
+                    "enabled": true,
+                    "handshake": {"server": "%s", "server_port": 443},
+                    "private_key": "%s",
+                    "short_id": "%s"
+                  }
+                }
+              }
+            """.formatted(realityPort, uuid, cert, key, sni, privateKey, shortId));
         }
 
-        // === TUIC v5 (UDP) ===
+        String udpPort = !tuicPort.isEmpty() ? tuicPort : (!hy2Port.isEmpty() ? hy2Port : realityPort);
+
         if (tuic) {
-            inbounds.add(String.format(
-              "{\n" +
-              "  \"type\": \"tuic\",\n" +
-              "  \"tag\": \"tuic-in\",\n" +
-              "  \"listen\": \"::\",\n" +
-              "  \"listen_port\": %d,\n" +
-              "  \"users\": [{\"uuid\": \"%s\", \"password\": \"%s\"}],\n" +
-              "  \"congestion_control\": \"bbr\",\n" +
-              "  \"alpn\": [\"h3\"],\n" +
-              "  \"udp_relay_mode\": \"native\",\n" +
-              "  \"certificate\": \"%s\",\n" +
-              "  \"private_key\": \"%s\"\n" +
-              "}",
-              tuicPort, uuid, PASSWORD,
-              cert.toAbsolutePath().toString().replace("\\", "\\\\"),
-              key.toAbsolutePath().toString().replace("\\", "\\\\")
-            ));
+            inbounds.add("""
+              {
+                "type": "tuic",
+                "tag": "tuic-in",
+                "listen": "::",
+                "listen_port": %s,
+                "uuid": "%s",
+                "password": "%s",
+                "certificate_path": "%s",
+                "key_path": "%s",
+                "congestion_control": "bbr",
+                "udp_relay_mode": "native",
+                "alpn": ["h3"]
+              }
+            """.formatted(udpPort, uuid, password, cert, key));
         }
 
-        // === Hysteria2 (UDP) ===
         if (hy2) {
-            inbounds.add(String.format(
-              "{\n" +
-              "  \"type\": \"hysteria2\",\n" +
-              "  \"tag\": \"hy2-in\",\n" +
-              "  \"listen\": \"::\",\n" +
-              "  \"listen_port\": %d,\n" +
-              "  \"password\": \"%s\"\n" +
-              "}",
-              hy2Port, PASSWORD
-            ));
+            inbounds.add("""
+              {
+                "type": "hysteria2",
+                "tag": "hy2-in",
+                "listen": "::",
+                "listen_port": %s,
+                "password": "%s"
+              }
+            """.formatted(udpPort, password));
         }
 
-        String json = String.format(
-            "{\n" +
-            "  \"log\": {\"level\": \"info\"},\n" +
-            "  \"inbounds\": [%s],\n" +
-            "  \"outbounds\": [{\"type\": \"direct\"}]\n" +
-            "}",
-            String.join(", ", inbounds)
-        );
+        String json = """
+        {
+          "log": { "level": "info" },
+          "inbounds": [%s],
+          "outbounds": [{"type": "direct"}]
+        }
+        """.formatted(String.join(",", inbounds));
 
-        Files.write(configFile, json.getBytes("UTF-8"));
-        System.out.println("sing-box 配置生成完成");
+        Files.writeString(configFile, json);
+        System.out.println("✅ sing-box 配置生成完成");
     }
-
-    // 其余方法（fetchLatestSingBoxVersion, safeDownloadSingBox, startSingBox, detectPublicIP, printDeployedLinks, scheduleDailyRestart, deleteDirectory）
-    // 完全不变，直接复制之前的即可
 
     private static String fetchLatestSingBoxVersion() {
         String fallback = "1.12.12";
@@ -248,57 +188,52 @@ public class PaperBootstrap {
             conn.setConnectTimeout(5000);
             conn.setReadTimeout(5000);
             conn.setRequestProperty("Accept", "application/vnd.github.v3+json");
-            StringBuilder json = new StringBuilder();
             try (BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
-                String line;
-                while ((line = br.readLine()) != null) json.append(line);
-            }
-            int i = json.indexOf("\"tag_name\":\"v");
-            if (i != -1) {
-                String v = json.substring(i + 13, json.indexOf("\"", i + 13));
-                System.out.println("最新版本: " + v);
-                return v;
+                String json = br.lines().reduce("", (a, b) -> a + b);
+                int i = json.indexOf("\"tag_name\":\"v");
+                if (i != -1) {
+                    String v = json.substring(i + 13, json.indexOf("\"", i + 13));
+                    System.out.println("🔍 最新版本: " + v);
+                    return v;
+                }
             }
         } catch (Exception e) {
-            System.out.println("获取版本失败，使用回退版本 " + fallback);
+            System.out.println("⚠️ 获取版本失败，使用回退版本 " + fallback);
         }
         return fallback;
     }
 
     private static void safeDownloadSingBox(String version, Path bin, Path dir) throws IOException, InterruptedException {
-        if (Files.exists(bin)) {
-            System.out.println("sing-box 已存在，跳过下载");
-            return;
-        }
-
+        if (Files.exists(bin)) return;
         String arch = detectArch();
         String file = "sing-box-" + version + "-linux-" + arch + ".tar.gz";
         String url = "https://github.com/SagerNet/sing-box/releases/download/v" + version + "/" + file;
-        System.out.println("下载 sing-box: " + url);
-        Path tar = dir.resolve(file);
 
+        System.out.println("⬇️ 下载 sing-box: " + url);
+        Path tar = dir.resolve(file);
         new ProcessBuilder("bash", "-c", "curl -L -o " + tar + " " + url)
                 .inheritIO().start().waitFor();
 
         new ProcessBuilder("bash", "-c",
                 "cd " + dir + " && tar -xzf " + file + " && " +
-                        "find . -type f -name 'sing-box' -exec mv {} sing-box \\; && rm -rf sing-box-*")
+                        "(find . -type f -name 'sing-box' -exec mv {} ./sing-box \\; && chmod +x sing-box) && rm -rf sing-box-*")
                 .inheritIO().start().waitFor();
 
-        if (!Files.exists(bin)) throw new IOException("sing-box 下载失败！");
-        System.out.println("sing-box 下载并解压成功");
+        if (!Files.exists(bin)) throw new IOException("未找到 sing-box 可执行文件！");
+        System.out.println("✅ 成功解压 sing-box 可执行文件");
     }
 
     private static String detectArch() {
         String a = System.getProperty("os.arch").toLowerCase();
-        return (a.contains("aarch") || a.contains("arm")) ? "arm64" : "amd64";
+        if (a.contains("aarch") || a.contains("arm")) return "arm64";
+        return "amd64";
     }
 
     private static void startSingBox(Path bin, Path cfg) throws IOException, InterruptedException {
         new ProcessBuilder("bash", "-c", bin + " run -c " + cfg + " > /tmp/singbox.log 2>&1 &")
                 .inheritIO().start();
-        Thread.sleep(3000);
-        System.out.println("sing-box 已启动");
+        Thread.sleep(2000);
+        System.out.println("🚀 sing-box 已启动");
     }
 
     private static String detectPublicIP() {
@@ -309,30 +244,19 @@ public class PaperBootstrap {
         }
     }
 
-    private static void printDeployedLinks(
-            String uuid, boolean reality, boolean tuic, boolean hy2,
-            int realityPort, int tuicPort, int hy2Port,
-            String sni, String host, String publicKey
-    ) {
-        System.out.println("\n=== 已部署节点链接 ===");
-
-        if (reality) {
-            System.out.printf("VLESS Reality (TCP):\nvless://%s@%s:%d?encryption=none&security=reality&password=%s&sni=%s&fp=chrome&pbk=%s&sid=%s&type=tcp#Reality-TCP\n",
-                    uuid, host, realityPort, PASSWORD, sni, publicKey, FIXED_SHORT_ID);
-        }
-
-        if (tuic) {
-            String auth = uuid + ":" + PASSWORD;
-            String encoded = Base64.getUrlEncoder().withoutPadding().encodeToString(auth.getBytes());
-            System.out.printf("\nTUIC v5 (UDP):\ntuic://%s@%s:%d?alpn=h3&congestion_control=bbr#TUIC-v5\n",
-                    encoded, host, tuicPort);
-        }
-
-        if (hy2) {
-            String encoded = Base64.getUrlEncoder().withoutPadding().encodeToString(PASSWORD.getBytes());
-            System.out.printf("\nHysteria2:\nhy2://%s@%s:%d?#Hysteria2\n",
-                    encoded, host, hy2Port);
-        }
+    private static void printDeployedLinks(String uuid, boolean vless, boolean tuic, boolean hy2,
+                                           String tuicPort, String hy2Port, String realityPort,
+                                           String sni, String host) {
+        System.out.println("\n=== ✅ 已部署节点链接 ===");
+        if (vless)
+            System.out.printf("VLESS Reality:\nvless://%s@%s:%s?encryption=none&security=reality&sni=%s#Reality\n",
+                    uuid, host, realityPort, sni);
+        if (tuic)
+            System.out.printf("\nTUIC:\ntuic://%s@%s:%s?password=ieshare2025&alpn=h3#TUIC\n",
+                    uuid, host, !tuicPort.isEmpty() ? tuicPort : realityPort);
+        if (hy2)
+            System.out.printf("\nHysteria2:\nhy2://%s@%s:%s?password=ieshare2025#Hysteria2\n",
+                    uuid, host, !hy2Port.isEmpty() ? hy2Port : realityPort);
     }
 
     private static void scheduleDailyRestart() {
@@ -341,12 +265,10 @@ public class PaperBootstrap {
             System.out.println("[定时重启] 执行每日重启...");
             try { Runtime.getRuntime().exec("reboot"); } catch (IOException ignored) {}
         };
-        long delay = Duration.between(
-                LocalDateTime.now(ZoneId.of("Asia/Shanghai")),
-                LocalDate.now(ZoneId.of("Asia/Shanghai")).plusDays(1).atStartOfDay()
-        ).toSeconds();
+        long delay = Duration.between(LocalDateTime.now(ZoneId.of("Asia/Shanghai")),
+                LocalDate.now(ZoneId.of("Asia/Shanghai")).plusDays(1).atStartOfDay()).toSeconds();
         s.scheduleAtFixedRate(r, delay, 86400, TimeUnit.SECONDS);
-        System.out.println("[定时重启] 已计划每日 00:00 自动重启");
+        System.out.println("[定时重启] 已计划每日北京时间 00:00 自动重启");
     }
 
     private static void deleteDirectory(Path dir) throws IOException {
